<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Расписание автобусов Пинск</string>
    <string name="info_up">Внимание</string>
    <string name="info_text">Это приложение больше не зависит от доступа в интернет!\nПри первом запуске - нажмите кнопку |Обновить расписание|, и программа загрузит актуальное расписание на Ваше устройство. Теперь, оно всегда под рукой!\nВы сможете просматривать его оффлайн или обновлять до актуального (при наличии доступа в интернет).\nВАЖНО не прерывать обновление!\nЕсли в процессе возникнет ошибка - просто перезапустите его.</string>
    <string name="btn_1">Открыть расписание</string>
    <string name="btn_2">Обновить расписание</string>

</resources>